# crypto-engine-c

./: .gitignore  BUILD.bazel  MODULE.bazel
src/: hsm_wrapper.c  hsm_wrapper.h  main.c
